syntax = "proto3";
package proto;
option go_package = "github.com/stafansundin/terraform-provider-ssh/ssh/proto";
message InitSSHTunnelRequest {
  string user = 1;
  string address = 2;
  string ssh_auth_sock = 3;
  string private_key = 4;
  string certificate = 5;
  string local_address = 6;
  string remote_address = 7;
}

message InitSSHTunnelResponse {
  string effective_address = 1;
}

service SSHTunnel {
    rpc Init(InitSSHTunnelRequest) returns (InitSSHTunnelResponse);
}